--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 		</div>
 		<div class="clear"></div>
 	</div>
-	
+	<hr>
 	<div id="mainArea">
 		<section>
 			<article>
@@ -50,7 +50,8 @@
 			<div class="clear"></div>
 		</section>
 		
-		
+		<div class="line"></div>
+
 		<section>
 			<div class="sectionTitle">
 				<h1>Work Experience</h1>
@@ -77,7 +78,8 @@
 			</div>
 			<div class="clear"></div>
 		</section>
-		
+
+		<div class="line"></div>		
 		
 		<section>
 			<div class="sectionTitle">
@@ -98,7 +100,8 @@
 			</div>
 			<div class="clear"></div>
 		</section>
-		
+
+			<div class="line"></div>		
 		
 		<section>
 			<div class="sectionTitle">
